package ma.farm.model;

import java.time.LocalDate;
import java.util.Objects;

/**
 * Chicken model - Represents a chicken or batch of chickens
 * Used in: Chicken Bay page
 */
public class Chicken {

    // Fields
    private int id;
    private int houseId;                    // Foreign key to House
    private String batchNumber;             // Batch identifier
    private int quantity;                   // Number of chickens in batch
    private LocalDate arrivalDate;          // Date chickens arrived
    private int ageInDays;                  // Current age
    private String gender;                  // Male, Female, Mixed
    private String healthStatus;            // Healthy, Sick, Quarantine
    private double averageWeight;           // Average weight in kg
    private LocalDate nextTransferDate;     // When to move to next house

    // Default constructor
    public Chicken() {
    }

    // Constructor for new batch
    public Chicken(int houseId, String batchNumber, int quantity, LocalDate arrivalDate, String gender) {
    }

    // Full constructor
    public Chicken(int id, int houseId, String batchNumber, int quantity, LocalDate arrivalDate,
                   int ageInDays, String gender, String healthStatus, double averageWeight,
                   LocalDate nextTransferDate) {
    }

    // Getters and Setters
    public int getId() {
        return 0;
    }

    public void setId(int id) {
    }

    public int getHouseId() {
        return 0;
    }

    public void setHouseId(int houseId) {
    }

    public String getBatchNumber() {
        return null;
    }

    public void setBatchNumber(String batchNumber) {
    }

    public int getQuantity() {
        return 0;
    }

    public void setQuantity(int quantity) {
    }

    public LocalDate getArrivalDate() {
        return null;
    }

    public void setArrivalDate(LocalDate arrivalDate) {
    }

    public int getAgeInDays() {
        return 0;
    }

    public void setAgeInDays(int ageInDays) {
    }

    public String getGender() {
        return null;
    }

    public void setGender(String gender) {
    }

    public String getHealthStatus() {
        return null;
    }

    public void setHealthStatus(String healthStatus) {
    }

    public double getAverageWeight() {
        return 0.0;
    }

    public void setAverageWeight(double averageWeight) {
    }

    public LocalDate getNextTransferDate() {
        return null;
    }

    public void setNextTransferDate(LocalDate nextTransferDate) {
    }

    // Business methods

    /**
     * Calculate days until transfer to next house
     * @return Number of days remaining
     */
    public int getDaysUntilTransfer() {
        return 0;
    }

    /**
     * Check if chickens are ready for transfer
     * @return true if transfer date has passed
     */
    public boolean isReadyForTransfer() {
        return false;
    }

    @Override
    public boolean equals(Object o) {
        return false;
    }

    @Override
    public int hashCode() {
        return 0;
    }

    @Override
    public String toString() {
        return null;
    }
}