package ma.farm.model;

import java.time.LocalDate;
import java.util.Objects;

/**
 * EggProduction model - Represents daily egg production record
 * Used in: Dashboard, Eggs Bay pages
 */
public class EggProduction {

    // Fields
    private int id;
    private int houseId;                    // Foreign key to House (H2 or H3)
    private LocalDate productionDate;       // Date eggs were collected
    private int eggsCollected;              // Total eggs collected
    private int crackedEggs;                // Damaged eggs
    private int goodEggs;                   // Saleable eggs (calculated)
    private int deadChickens;               // Deaths on this day
    private String collectedBy;             // Worker name/id
    private String notes;                   // Additional observations

    // Default constructor
    public EggProduction() {
    }

    // Constructor for new production record
    public EggProduction(int houseId, LocalDate productionDate, int eggsCollected,
                         int crackedEggs, int deadChickens) {
    }

    // Full constructor
    public EggProduction(int id, int houseId, LocalDate productionDate, int eggsCollected,
                         int crackedEggs, int goodEggs, int deadChickens,
                         String collectedBy, String notes) {
    }

    // Getters and Setters
    public int getId() {
        return 0;
    }

    public void setId(int id) {
    }

    public int getHouseId() {
        return 0;
    }

    public void setHouseId(int houseId) {
    }

    public LocalDate getProductionDate() {
        return null;
    }

    public void setProductionDate(LocalDate productionDate) {
    }

    public int getEggsCollected() {
        return 0;
    }

    public void setEggsCollected(int eggsCollected) {
    }

    public int getCrackedEggs() {
        return 0;
    }

    public void setCrackedEggs(int crackedEggs) {
    }

    public int getGoodEggs() {
        return 0;
    }

    public void setGoodEggs(int goodEggs) {
    }

    public int getDeadChickens() {
        return 0;
    }

    public void setDeadChickens(int deadChickens) {
    }

    public String getCollectedBy() {
        return null;
    }

    public void setCollectedBy(String collectedBy) {
    }

    public String getNotes() {
        return null;
    }

    public void setNotes(String notes) {
    }

    // Business methods

    /**
     * Calculate good eggs automatically
     * Good eggs = Total collected - Cracked eggs
     */
    public void calculateGoodEggs() {
    }

    /**
     * Calculate egg production efficiency
     * @return Percentage of good eggs vs collected
     */
    public double getEfficiencyRate() {
        return 0.0;
    }

    @Override
    public boolean equals(Object o) {
        return false;
    }

    @Override
    public int hashCode() {
        return 0;
    }

    @Override
    public String toString() {
        return null;
    }
}