package ma.farm.model;

import java.time.LocalDate;
import java.util.Objects;

/**
 * Equipment model - Represents farm equipment inventory
 * Used in: Storage page
 */
public class Equipment {

    // Fields
    private int id;
    private String name;                    // Equipment name
    private String category;                // Feeding, Cleaning, Medical, Other
    private int quantity;                   // Number of units
    private String status;                  // Good, Fair, Broken
    private LocalDate purchaseDate;         // Purchase date
    private double purchasePrice;           // Original cost
    private LocalDate lastMaintenanceDate;  // Last maintenance
    private LocalDate nextMaintenanceDate;  // Scheduled maintenance
    private String location;                // Where stored
    private String notes;                   // Additional info

    // Default constructor
    public Equipment() {
    }

    // Constructor for new equipment
    public Equipment(String name, String category, int quantity, String status) {
    }

    // Full constructor
    public Equipment(int id, String name, String category, int quantity, String status,
                     LocalDate purchaseDate, double purchasePrice, LocalDate lastMaintenanceDate,
                     LocalDate nextMaintenanceDate, String location, String notes) {
    }

    // Getters and Setters
    public int getId() {
        return 0;
    }

    public void setId(int id) {
    }

    public String getName() {
        return null;
    }

    public void setName(String name) {
    }

    public String getCategory() {
        return null;
    }

    public void setCategory(String category) {
    }

    public int getQuantity() {
        return 0;
    }

    public void setQuantity(int quantity) {
    }

    public String getStatus() {
        return null;
    }

    public void setStatus(String status) {
    }

    public LocalDate getPurchaseDate() {
        return null;
    }

    public void setPurchaseDate(LocalDate purchaseDate) {
    }

    public double getPurchasePrice() {
        return 0.0;
    }

    public void setPurchasePrice(double purchasePrice) {
    }

    public LocalDate getLastMaintenanceDate() {
        return null;
    }

    public void setLastMaintenanceDate(LocalDate lastMaintenanceDate) {
    }

    public LocalDate getNextMaintenanceDate() {
        return null;
    }

    public void setNextMaintenanceDate(LocalDate nextMaintenanceDate) {
    }

    public String getLocation() {
        return null;
    }

    public void setLocation(String location) {
    }

    public String getNotes() {
        return null;
    }

    public void setNotes(String notes) {
    }

    // Business methods

    /**
     * Check if equipment needs maintenance
     * @return true if maintenance is due
     */
    public boolean needsMaintenance() {
        return false;
    }

    /**
     * Check if equipment is broken
     * @return true if status is "Broken"
     */
    public boolean isBroken() {
        return false;
    }

    /**
     * Check if equipment is operational
     * @return true if status is "Good" or "Fair"
     */
    public boolean isOperational() {
        return false;
    }

    @Override
    public boolean equals(Object o) {
        return false;
    }

    @Override
    public int hashCode() {
        return 0;
    }

    @Override
    public String toString() {
        return null;
    }
}