package ma.farm.model;

import java.time.LocalDate;
import java.util.Objects;

/**
 * Mortality model - Represents chicken death records
 * Used in: Chicken Bay page
 */
public class Mortality {

    // Fields
    private int id;
    private int houseId;                    // Foreign key to House
    private LocalDate deathDate;            // Date of death
    private int count;                      // Number of deaths
    private String cause;                   // Disease, Age, Accident, Unknown
    private String symptoms;                // Observed symptoms
    private boolean isOutbreak;             // Flag for disease outbreak
    private String recordedBy;              // Worker who recorded
    private String notes;                   // Additional details

    // Default constructor
    public Mortality() {
    }

    // Constructor for new mortality record
    public Mortality(int houseId, LocalDate deathDate, int count, String cause) {
    }

    // Full constructor
    public Mortality(int id, int houseId, LocalDate deathDate, int count, String cause,
                     String symptoms, boolean isOutbreak, String recordedBy, String notes) {
    }

    // Getters and Setters
    public int getId() {
        return 0;
    }

    public void setId(int id) {
    }

    public int getHouseId() {
        return 0;
    }

    public void setHouseId(int houseId) {
    }

    public LocalDate getDeathDate() {
        return null;
    }

    public void setDeathDate(LocalDate deathDate) {
    }

    public int getCount() {
        return 0;
    }

    public void setCount(int count) {
    }

    public String getCause() {
        return null;
    }

    public void setCause(String cause) {
    }

    public String getSymptoms() {
        return null;
    }

    public void setSymptoms(String symptoms) {
    }

    public boolean isOutbreak() {
        return false;
    }

    public void setOutbreak(boolean outbreak) {
    }

    public String getRecordedBy() {
        return null;
    }

    public void setRecordedBy(String recordedBy) {
    }

    public String getNotes() {
        return null;
    }

    public void setNotes(String notes) {
    }

    // Business methods

    /**
     * Check if mortality rate is concerning
     * @param totalChickens Total chickens in house
     * @return true if deaths exceed 2% of population
     */
    public boolean isConcerningRate(int totalChickens) {
        return false;
    }

    @Override
    public boolean equals(Object o) {
        return false;
    }

    @Override
    public int hashCode() {
        return 0;
    }

    @Override
    public String toString() {
        return null;
    }
}