@startuml Diagram_1_Domain_Model

title Diagram 1: Domain Model (Entities + Enums)

!define ENUM enum

' ========================================
' ENUMERATIONS
' ========================================

ENUM HouseType {
  CHICK_NURSERY
  EGG_LAYER
  MEAT_FEMALE
  MEAT_MALE
}

ENUM ChickenType {
  DAY_OLD_CHICK
  FEMALE_LAYER
  FEMALE_MEAT
  MALE_MEAT
}

ENUM HealthStatus {
  GOOD
  FAIR
  POOR
}

ENUM MortalityCause {
  DISEASE
  INJURY
  UNKNOWN
  NATURAL
}

ENUM FeedType {
  CHICK_STARTER
  EGG_LAYER
  MEAT_GROWER
}

ENUM EquipmentStatus {
  OPERATIONAL
  NEEDS_REPAIR
  BROKEN
}

ENUM TaskStatus {
  DONE
  PENDING
  MISSED
}

ENUM PersonnelRole {
  WORKER
  TRACKER
}

' ========================================
' MODEL CLASSES (Domain Entities)
' ========================================

class User {
  - userID: String
  - email: String
  - password: String
  - role: String
  - lastLogin: LocalDateTime
  --
  + User()
  + User(email, password, role)
  --
  + getUserID(): String
  + getEmail(): String
  + getPassword(): String
  + getRole(): String
  + getLastLogin(): LocalDateTime
  --
  + setUserID(userID: String): void
  + setEmail(email: String): void
  + setPassword(password: String): void
  + setRole(role: String): void
  + setLastLogin(lastLogin: LocalDateTime): void
}

class House {
  - houseID: String
  - houseNumber: int
  - houseType: HouseType
  - capacity: int
  - currentCount: int
  - healthStatus: HealthStatus
  - lastCleaningDate: LocalDate
  --
  + House()
  + House(houseNumber, houseType, capacity)
  --
  + getHouseID(): String
  + getHouseNumber(): int
  + getHouseType(): HouseType
  + getCapacity(): int
  + getCurrentCount(): int
  + getHealthStatus(): HealthStatus
  + getLastCleaningDate(): LocalDate
  --
  + setHouseID(houseID: String): void
  + setHouseNumber(houseNumber: int): void
  + setHouseType(houseType: HouseType): void
  + setCapacity(capacity: int): void
  + setCurrentCount(currentCount: int): void
  + setHealthStatus(healthStatus: HealthStatus): void
  + setLastCleaningDate(date: LocalDate): void
  --
  + calculateOccupancy(): double
  + getDaysUntilTransfer(): int
}

class Chicken {
  - chickenID: String
  - chickenType: ChickenType
  - gender: String
  - arrivalDate: LocalDate
  - houseID: String
  - healthStatus: HealthStatus
  - ageInDays: int
  --
  + Chicken()
  + Chicken(chickenType, gender, arrivalDate, houseID)
  --
  + getChickenID(): String
  + getChickenType(): ChickenType
  + getGender(): String
  + getArrivalDate(): LocalDate
  + getHouseID(): String
  + getHealthStatus(): HealthStatus
  + getAgeInDays(): int
  --
  + setChickenID(chickenID: String): void
  + setChickenType(chickenType: ChickenType): void
  + setGender(gender: String): void
  + setArrivalDate(arrivalDate: LocalDate): void
  + setHouseID(houseID: String): void
  + setHealthStatus(healthStatus: HealthStatus): void
  + setAgeInDays(ageInDays: int): void
  --
  + calculateAge(): int
  + shouldTransfer(): boolean
}

class Mortality {
  - mortalityID: String
  - chickenID: String
  - houseID: String
  - deathDate: LocalDate
  - cause: MortalityCause
  - count: int
  - notes: String
  --
  + Mortality()
  + Mortality(chickenID, houseID, deathDate, cause, count)
  --
  + getMortalityID(): String
  + getChickenID(): String
  + getHouseID(): String
  + getDeathDate(): LocalDate
  + getCause(): MortalityCause
  + getCount(): int
  + getNotes(): String
  --
  + setMortalityID(mortalityID: String): void
  + setChickenID(chickenID: String): void
  + setHouseID(houseID: String): void
  + setDeathDate(deathDate: LocalDate): void
  + setCause(cause: MortalityCause): void
  + setCount(count: int): void
  + setNotes(notes: String): void
}

class EggProduction {
  - productionID: String
  - houseID: String
  - collectionDate: LocalDate
  - eggsCollected: int
  - crackedEggs: int
  - deadChickens: int
  --
  + EggProduction()
  + EggProduction(houseID, collectionDate, eggsCollected, crackedEggs)
  --
  + getProductionID(): String
  + getHouseID(): String
  + getCollectionDate(): LocalDate
  + getEggsCollected(): int
  + getCrackedEggs(): int
  + getDeadChickens(): int
  --
  + setProductionID(productionID: String): void
  + setHouseID(houseID: String): void
  + setCollectionDate(collectionDate: LocalDate): void
  + setEggsCollected(eggsCollected: int): void
  + setCrackedEggs(crackedEggs: int): void
  + setDeadChickens(deadChickens: int): void
  --
  + calculateCleanEggs(): int
}

class Feed {
  - feedID: String
  - feedType: FeedType
  - quantityKg: double
  - lastUpdated: LocalDate
  - minThreshold: double
  --
  + Feed()
  + Feed(feedType, quantityKg, minThreshold)
  --
  + getFeedID(): String
  + getFeedType(): FeedType
  + getQuantityKg(): double
  + getLastUpdated(): LocalDate
  + getMinThreshold(): double
  --
  + setFeedID(feedID: String): void
  + setFeedType(feedType: FeedType): void
  + setQuantityKg(quantityKg: double): void
  + setLastUpdated(lastUpdated: LocalDate): void
  + setMinThreshold(minThreshold: double): void
  --
  + isLowStock(): boolean
}

class Medication {
  - medicationID: String
  - name: String
  - quantity: int
  - expiryDate: LocalDate
  - minThreshold: int
  --
  + Medication()
  + Medication(name, quantity, expiryDate, minThreshold)
  --
  + getMedicationID(): String
  + getName(): String
  + getQuantity(): int
  + getExpiryDate(): LocalDate
  + getMinThreshold(): int
  --
  + setMedicationID(medicationID: String): void
  + setName(name: String): void
  + setQuantity(quantity: int): void
  + setExpiryDate(expiryDate: LocalDate): void
  + setMinThreshold(minThreshold: int): void
  --
  + isExpired(): boolean
  + isLowStock(): boolean
}

class Equipment {
  - equipmentID: String
  - name: String
  - quantity: int
  - status: EquipmentStatus
  - purchaseDate: LocalDate
  --
  + Equipment()
  + Equipment(name, quantity, status)
  --
  + getEquipmentID(): String
  + getName(): String
  + getQuantity(): int
  + getStatus(): EquipmentStatus
  + getPurchaseDate(): LocalDate
  --
  + setEquipmentID(equipmentID: String): void
  + setName(name: String): void
  + setQuantity(quantity: int): void
  + setStatus(status: EquipmentStatus): void
  + setPurchaseDate(purchaseDate: LocalDate): void
}

class Task {
  - taskID: String
  - description: String
  - status: TaskStatus
  - dueDate: LocalDate
  - crackedEggsCount: int
  - assignedPersonnelID: String
  --
  + Task()
  + Task(description, dueDate, assignedPersonnelID)
  --
  + getTaskID(): String
  + getDescription(): String
  + getStatus(): TaskStatus
  + getDueDate(): LocalDate
  + getCrackedEggsCount(): int
  + getAssignedPersonnelID(): String
  --
  + setTaskID(taskID: String): void
  + setDescription(description: String): void
  + setStatus(status: TaskStatus): void
  + setDueDate(dueDate: LocalDate): void
  + setCrackedEggsCount(crackedEggsCount: int): void
  + setAssignedPersonnelID(assignedPersonnelID: String): void
  --
  + isPending(): boolean
  + isMissed(): boolean
}

class Personnel {
  - personnelID: String
  - fullName: String
  - age: int
  - phone: String
  - email: String
  - role: PersonnelRole
  --
  + Personnel()
  + Personnel(fullName, age, phone, email, role)
  --
  + getPersonnelID(): String
  + getFullName(): String
  + getAge(): int
  + getPhone(): String
  + getEmail(): String
  + getRole(): PersonnelRole
  --
  + setPersonnelID(personnelID: String): void
  + setFullName(fullName: String): void
  + setAge(age: int): void
  + setPhone(phone: String): void
  + setEmail(email: String): void
  + setRole(role: PersonnelRole): void
}

' ========================================
' ENTITY RELATIONSHIPS
' ========================================

House "1" -- "0..*" Chicken : contains
House "1" -- "0..*" EggProduction : produces
House "1" -- "0..*" Mortality : records
Task "0..*" -- "0..1" Personnel : assigned_to

' ========================================
' ENUM RELATIONSHIPS
' ========================================

Chicken "*" --> "1" ChickenType
Chicken "*" --> "1" HealthStatus
House "*" --> "1" HouseType
House "*" --> "1" HealthStatus
Mortality "*" --> "1" MortalityCause
Feed "*" --> "1" FeedType
Equipment "*" --> "1" EquipmentStatus
Task "*" --> "1" TaskStatus
Personnel "*" --> "1" PersonnelRole


@enduml